// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Picker > Picker areaVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        选择地区
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  <!--teleport start-->
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-picker"
    >
      <div
        class="t-picker__toolbar"
      >
        <div
          class="t-picker__cancel"
        >
          取消
        </div>
        <div
          class="t-picker__title"
        >
          
        </div>
        <div
          class="t-picker__confirm"
        >
          确认
        </div>
      </div>
      <!---->
      <div
        class="t-picker__main"
      >
        
        <div
          class="t-picker-item__group"
        >
          <ul
            class="t-picker-item"
            style="transform: translate3d(0, 80px, 0);"
          >
            
            <li
              class="t-picker-item__item t-picker-item__item--active"
            >
              
              北京市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              广东省
              
            </li>
            
          </ul>
        </div>
        <div
          class="t-picker-item__group"
        >
          <ul
            class="t-picker-item"
            style="transform: translate3d(0, 80px, 0);"
          >
            
            
          </ul>
        </div>
        <div
          class="t-picker-item__group"
        >
          <ul
            class="t-picker-item"
            style="transform: translate3d(0, 80px, 0);"
          >
            
            
          </ul>
        </div>
        
        <div
          class="t-picker__mask t-picker__mask--top"
        />
        <div
          class="t-picker__mask t-picker__mask--bottom"
        />
        <div
          class="t-picker__indicator"
        />
      </div>
      <!---->
    </div>
    
  </div>
  
  <!--teleport end-->
  
</div>
`;

exports[`Picker > Picker baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
    data-v-f81bbd1f=""
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        选择地区
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell"
    data-v-f81bbd1f=""
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        选择时间
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  <!--teleport start-->
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-picker"
      data-v-f81bbd1f=""
    >
      <div
        class="t-picker__toolbar"
      >
        <div
          class="t-picker__cancel"
        >
          取消
        </div>
        <div
          class="t-picker__title"
        >
          
        </div>
        <div
          class="t-picker__confirm"
        >
          确认
        </div>
      </div>
      <!---->
      <div
        class="t-picker__main"
      >
        
        <div
          class="t-picker-item__group"
        >
          <ul
            class="t-picker-item"
            style="transform: translate3d(0, 80px, 0);"
          >
            
            <li
              class="t-picker-item__item t-picker-item__item--active"
            >
              
              北京市
              
            </li>
            <li
              class="t-picker-item__item t-picker-item__item--disabled"
            >
              
              上海市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              广州市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              深圳市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              杭州市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              成都市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              长沙市
              
            </li>
            
          </ul>
        </div>
        
        <div
          class="t-picker__mask t-picker__mask--top"
        />
        <div
          class="t-picker__mask t-picker__mask--bottom"
        />
        <div
          class="t-picker__indicator"
        />
      </div>
      <!---->
    </div>
    
  </div>
  
  <!--teleport end-->
  <!--teleport start-->
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-picker"
      data-v-f81bbd1f=""
    >
      <div
        class="t-picker__toolbar"
      >
        <div
          class="t-picker__cancel"
        >
          取消
        </div>
        <div
          class="t-picker__title"
        >
          
        </div>
        <div
          class="t-picker__confirm"
        >
          确认
        </div>
      </div>
      <!---->
      <div
        class="t-picker__main"
      >
        
        <div
          class="t-picker-item__group"
        >
          <ul
            class="t-picker-item"
            style="transform: translate3d(0, 80px, 0);"
          >
            
            <li
              class="t-picker-item__item t-picker-item__item--active"
            >
              
              2026
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2025
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2024
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2023
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2022
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2021
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2020
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2019
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2018
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              2017
              
            </li>
            
          </ul>
        </div>
        <div
          class="t-picker-item__group"
        >
          <ul
            class="t-picker-item"
            style="transform: translate3d(0, 80px, 0);"
          >
            
            <li
              class="t-picker-item__item t-picker-item__item--active"
            >
              
              春
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              夏
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              秋
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              冬
              
            </li>
            
          </ul>
        </div>
        
        <div
          class="t-picker__mask t-picker__mask--top"
        />
        <div
          class="t-picker__mask t-picker__mask--bottom"
        />
        <div
          class="t-picker__indicator"
        />
      </div>
      <!---->
    </div>
    
  </div>
  
  <!--teleport end-->
  
</div>
`;

exports[`Picker > Picker customHeightVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        自定义高度选择器
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  <!--v-if-->
  
</div>
`;

exports[`Picker > Picker mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Picker 选择器
  </h1>
  <p
    class="summary"
  >
    用于一组预设数据中的选择。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础选择器
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
        data-v-f81bbd1f=""
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            选择地区
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="t-cell"
        data-v-f81bbd1f=""
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            选择时间
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <!--teleport start-->
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-picker"
          data-v-f81bbd1f=""
        >
          <div
            class="t-picker__toolbar"
          >
            <div
              class="t-picker__cancel"
            >
              取消
            </div>
            <div
              class="t-picker__title"
            >
              
            </div>
            <div
              class="t-picker__confirm"
            >
              确认
            </div>
          </div>
          <!---->
          <div
            class="t-picker__main"
          >
            
            <div
              class="t-picker-item__group"
            >
              <ul
                class="t-picker-item"
                style="transform: translate3d(0, 80px, 0);"
              >
                
                <li
                  class="t-picker-item__item t-picker-item__item--active"
                >
                  
                  北京市
                  
                </li>
                <li
                  class="t-picker-item__item t-picker-item__item--disabled"
                >
                  
                  上海市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  广州市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  深圳市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  杭州市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  成都市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  长沙市
                  
                </li>
                
              </ul>
            </div>
            
            <div
              class="t-picker__mask t-picker__mask--top"
            />
            <div
              class="t-picker__mask t-picker__mask--bottom"
            />
            <div
              class="t-picker__indicator"
            />
          </div>
          <!---->
        </div>
        
      </div>
      
      <!--teleport end-->
      <!--teleport start-->
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-picker"
          data-v-f81bbd1f=""
        >
          <div
            class="t-picker__toolbar"
          >
            <div
              class="t-picker__cancel"
            >
              取消
            </div>
            <div
              class="t-picker__title"
            >
              
            </div>
            <div
              class="t-picker__confirm"
            >
              确认
            </div>
          </div>
          <!---->
          <div
            class="t-picker__main"
          >
            
            <div
              class="t-picker-item__group"
            >
              <ul
                class="t-picker-item"
                style="transform: translate3d(0, 80px, 0);"
              >
                
                <li
                  class="t-picker-item__item t-picker-item__item--active"
                >
                  
                  2026
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2025
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2024
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2023
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2022
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2021
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2020
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2019
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2018
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  2017
                  
                </li>
                
              </ul>
            </div>
            <div
              class="t-picker-item__group"
            >
              <ul
                class="t-picker-item"
                style="transform: translate3d(0, 80px, 0);"
              >
                
                <li
                  class="t-picker-item__item t-picker-item__item--active"
                >
                  
                  春
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  夏
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  秋
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  冬
                  
                </li>
                
              </ul>
            </div>
            
            <div
              class="t-picker__mask t-picker__mask--top"
            />
            <div
              class="t-picker__mask t-picker__mask--bottom"
            />
            <div
              class="t-picker__indicator"
            />
          </div>
          <!---->
        </div>
        
      </div>
      
      <!--teleport end-->
      
      
      <div
        class="t-cell"
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            选择地区
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <!--teleport start-->
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-picker"
        >
          <div
            class="t-picker__toolbar"
          >
            <div
              class="t-picker__cancel"
            >
              取消
            </div>
            <div
              class="t-picker__title"
            >
              
            </div>
            <div
              class="t-picker__confirm"
            >
              确认
            </div>
          </div>
          <!---->
          <div
            class="t-picker__main"
          >
            
            <div
              class="t-picker-item__group"
            >
              <ul
                class="t-picker-item"
                style="transform: translate3d(0, 80px, 0);"
              >
                
                <li
                  class="t-picker-item__item t-picker-item__item--active"
                >
                  
                  北京市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  广东省
                  
                </li>
                
              </ul>
            </div>
            <div
              class="t-picker-item__group"
            >
              <ul
                class="t-picker-item"
                style="transform: translate3d(0, 80px, 0);"
              >
                
                
              </ul>
            </div>
            <div
              class="t-picker-item__group"
            >
              <ul
                class="t-picker-item"
                style="transform: translate3d(0, 80px, 0);"
              >
                
                
              </ul>
            </div>
            
            <div
              class="t-picker__mask t-picker__mask--top"
            />
            <div
              class="t-picker__mask t-picker__mask--bottom"
            />
            <div
              class="t-picker__indicator"
            />
          </div>
          <!---->
        </div>
        
      </div>
      
      <!--teleport end-->
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
        data-v-5a52d0f7=""
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            带标题选择器
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="t-cell"
        data-v-5a52d0f7=""
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            无标题选择器
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <!--teleport start-->
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-picker"
          data-v-5a52d0f7=""
        >
          <div
            class="t-picker__toolbar"
          >
            <div
              class="t-picker__cancel"
            >
              取消
            </div>
            <div
              class="t-picker__title"
            >
              
            </div>
            <div
              class="t-picker__confirm"
            >
              确认
            </div>
          </div>
          <!---->
          <div
            class="t-picker__main"
          >
            
            <div
              class="t-picker-item__group"
            >
              <ul
                class="t-picker-item"
                style="transform: translate3d(0, 80px, 0);"
              >
                
                <li
                  class="t-picker-item__item t-picker-item__item--active"
                >
                  
                  北京市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  上海市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  广州市
                  
                </li>
                <li
                  class="t-picker-item__item"
                >
                  
                  深圳市
                  
                </li>
                
              </ul>
            </div>
            
            <div
              class="t-picker__mask t-picker__mask--top"
            />
            <div
              class="t-picker__mask t-picker__mask--bottom"
            />
            <div
              class="t-picker__indicator"
            />
          </div>
          <!---->
        </div>
        
      </div>
      
      <!--teleport end-->
      
      
      <div
        class="t-cell"
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            自定义高度选择器
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <!--v-if-->
      
      
    </div>
  </div>
</div>
`;

exports[`Picker > Picker withTitleVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
    data-v-5a52d0f7=""
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        带标题选择器
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell"
    data-v-5a52d0f7=""
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        无标题选择器
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  <!--teleport start-->
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-picker"
      data-v-5a52d0f7=""
    >
      <div
        class="t-picker__toolbar"
      >
        <div
          class="t-picker__cancel"
        >
          取消
        </div>
        <div
          class="t-picker__title"
        >
          
        </div>
        <div
          class="t-picker__confirm"
        >
          确认
        </div>
      </div>
      <!---->
      <div
        class="t-picker__main"
      >
        
        <div
          class="t-picker-item__group"
        >
          <ul
            class="t-picker-item"
            style="transform: translate3d(0, 80px, 0);"
          >
            
            <li
              class="t-picker-item__item t-picker-item__item--active"
            >
              
              北京市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              上海市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              广州市
              
            </li>
            <li
              class="t-picker-item__item"
            >
              
              深圳市
              
            </li>
            
          </ul>
        </div>
        
        <div
          class="t-picker__mask t-picker__mask--top"
        />
        <div
          class="t-picker__mask t-picker__mask--bottom"
        />
        <div
          class="t-picker__indicator"
        />
      </div>
      <!---->
    </div>
    
  </div>
  
  <!--teleport end-->
  
</div>
`;
